exception/Er.h

struct Er_Ret
{
    const char* message;
};
Gcc_PRINTF(4, 5)
Gcc_USE_RET
struct Er_Ret* Er__raise(char* file, int line, struct Allocator* alloc, char* format, ...);
void Er__assertFail(struct Er_Ret* er);